Closed Bug 1543209 Opened 7 years ago Closed 7 years ago

LSNG: Detect missing unregister calls for live datastores using CheckedUnsafePtr

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This also may help with fixing shutdown hangs.

Assignee: nobody → jvarga
Blocks: 1540402
Status: NEW → ASSIGNED
Priority: -- → P1
Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/c2d5b9fd4ffe LSNG: Detect missing unregister calls for live datastores using CheckedUnsafePtr; r=asuth
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: