Bug 1543209 - LSNG: Detect missing unregister calls for live datastores using CheckedUnsafePtr; r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D26826